# ECE129-Capstone

./: README.md  driving_test_final.py  full_perception_stack.py  lane_detect.py  mini_car_motion.ino  semantic.ipynb
Integrated Solution/: imu.py  lane_detection.py  main.py
ROS/scripts/: arduino_listener.py  arduino_node.py  arduino_sender.py  command_listener.py  lane_detect1.py  listener.py  message_info_service.py  talker.py
motion/: Lorenz.m  PhysicalModel.m  Pure_Pursuit.py  pure_pursuit_modified.py  talker.py
path-planning/: pub.py  sub.py
path-planning/rrt-planning/: CMakeLists.txt  package.xml
path-planning/rrt-planning/src/: rrt.cpp  rrtImpl.h
